@@ -6,6 +6,10 @@
 
 	* ipmi-sensors/: Code cleanup, rename 'reading' to
 	'sensor_reading' for consistency.
+
+	* libfreeipmi/cmds/ipmi-lan-cmds.c: Fix packet layout for
+	tmpl_cmd_get_lan_configuration_parameters_rmcpplus_messaging_cipher_suite_entry_support_rs.
+	
 	
 2012-02-17  Albert Chu <chu11@llnl.gov>
 
